Make card have 30% height and width and ensure gaps between cards

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -40,6 +40,12 @@ body {
   padding: 48px;
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
+}
+
+.card {
+  width: 30%;
+  height: 30%;
 }
 
 .footer {
